# python-mlb-statsapi

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/: pull_request_template.md
.github/scripts/: issueslackbot.py  prslackbot.py  pytest_report_issues.py
.github/workflows/: build-and-test-mlbstatsapi-prd.yml  build-and-test-mlbstatsapi-test.yml  build-and-test-mlbstatsapi.yml  build-and-test.yml  catch-and-report.yml  issues-slack-bot.yml  post-pr-url.yml
docs/: attendance.md  awards.md  divisions.md  drafts.md  gamepace.md  games.md  homerunderby.md  leagues.md  people.md  schedules.md  seasons.md  sports.md  standings.md  stats.md  teams.md  venues.md
docs/Wiki Pages/: Data Types: Attendence.md  Data Types: Award.md  Data Types: Division.md  Data Types: Draft(round).md  Data Types: Game.md  Data Types: Gamepace.md  Data Types: Homerunderby.md  Data Types: League.md  Data Types: People.md  Data Types: Schedule.md  Data Types: Season.md  Data Types: Sport.md  Data Types: Standings.md  Data Types: Stats.md  (+6 more)
examples/: get_gameStats_from_current_games.py  get_game_ids.py  player_stats_for_game.py
mlbStatsAPI/: __init__.py  functions.py  game.py  person.py  team.py
mlbstatsapi/: __init__.py  exceptions.py  mlb.py  mlb_api.py  mlb_dataadapter.py  mlb_functions.py  mlb_module.py  mlbapi.py  mlbdataadapter.py  person.py  sport.py  stat.py  team.py
tests/: test_game.py  test_mlb.py  test_person.py  test_stat.py  test_team.py
utils/: data_find.py  endpoint_information.json  endpoint_information3.json  find_json_outliers.py  game_find_json_outliers.py  prslackbot.py  team_stat_types_groups.json
(+322 files in other folders)
