[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "python-mlb-statsapi"
version = "0.5.23"

authors = [
  { name="Matthew Spah", email="spahmatthew@gmail.com" },
  { name="Kristian Nilssen", email="krinilssen@gmail.com" },
]
description = "mlbstatsapi python wrapper"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.10"
dependencies = [
  "requests>=2", 
  "requests_mock>=1.10.0"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
[project.urls]
"Homepage" = "https://github.com/zero-sum-seattle/python-mlb-statsapi"
"Bug Tracker" = "https://github.com/zero-sum-seattle/python-mlb-statsapi/issues"
